--- a/css/style.css
+++ b/css/style.css
@@ -1050,7 +1050,7 @@ body {
         min-width: 500px;
     }
 } 
-.add_skill 
+#add_skill 
 {
   margin-bottom: 10px;
 }
@@ -1073,3 +1073,91 @@ body {
     border: 1px solid #00c6d7;;
 }
 .pagination a:hover:not(.active) {background-color: #ddd;}
+.developer_description
+{
+  box-shadow: 0 0 4px 0 rgba(0,0,0,.08), 0 2px 4px 0 rgba(0,0,0,.12);
+  background-color: #fff;
+  border-radius: 4px;
+  margin-top: 12px;
+}
+.head_developer_description
+{
+  display: flex;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.head_developer_description img
+{
+  margin-bottom: 12px;
+}
+.developer_image
+{
+  width: 50px;
+  height: 50px;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+.developer_image img
+{
+  width: 50px;
+  height:50px;
+}
+.developer_column
+{
+  display: flex;
+  flex-direction: column;
+  margin-left: 15px;
+}
+.developer_star
+{
+  width: 24px;
+  height: 24px;
+}
+.developer_short_description
+{
+  width: 100%;
+  height: 150px;
+  padding-top: 12px;
+  border-top:3px solid #e0e0df;
+}
+.hireme
+{
+  padding-top: 12px;
+  padding: 8px 26px;
+  background-color: #00c6d7;
+  border-bottom-right-radius:4px;
+  border-bottom-left-radius:4px;
+  color: #fff;
+}
+.developer_description a
+{
+  color: #fff;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-decoration: none;
+}
+.radius
+{
+  border-bottom-right-radius: 4px;
+}
+.hide-select
+{
+  display: none;
+}
+#hidedskills {
+  display:none;
+}
+#btnhide
+{
+  display:none;
+}
+.fa-pencil {
+    margin-top: 3px;
+}
+#hidedskills2 {
+  display:none;
+}
+#btnhide2
+{
+  display:none;
+}
